--- a/plantsuwa/app/views/layouts/application.html.erb
+++ b/plantsuwa/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title><%= full_title(yield(:title)).html_safe %></title>
 
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true, "jquery.tmpl", "json", "jquery.offline" %>
   <%= csrf_meta_tags %>
 
 	<!-- Bootstrap -->
